# agents-hands-on

./: .gitignore  README.md  SETUP.md  pyproject.toml
agents-examples/: .env_langsmith  AGENT_LEARN_PATH.md  Agentic_RAG_Context.md  README.md  agent_react_router_with_guardrails_v3.py  agent_react_router_with_rag_subgraph.py  agent_react_router_with_rag_subgraph_v2.py  agent_react_router_with_rag_v1.py  agent_router_with_react_rag_template.py  agents_hands_on_notes.md  binarygap_2703.py  ch_11_Goal_Setting_(Iteration).ipynb  cot_calcualtor.py  cot_calcualtor_toolcall.py  filecount_7579.py  guardrail_crewai.py  guardrail_evaluator.py  guardrail_evaluator_llama-guard3.py  guardrail_self_correction_pydantic.py  langgraph_notes.md  llm_as_a_judge.py  mem_compact_langgraph.py  mem_compact_manually.py  prioritization_pm_agent.py  rag_agentic_router.py  rag_chroma_langchain.py  rag_chunk_pcdr_redis.py  rag_chunk_pitfall.py  rag_hybrid_reranker.py  rag_multiquery.py  sse_api_agent_server.py  sse_api_agent_ui_v3.html
agents-examples/agentic-troubleshooting-workflow/: agent_prompts.py  graph_builder.py  (+3 more)
agents-examples/parallel-topic-analyzer/: .env.example  EXAMPLES.md  OLLAMA_INTERNALS.md  README.md  main.py  pyproject.toml
agents-examples/parallel-topic-analyzer/notebooks/: demo.ipynb
agents-examples/parallel-topic-analyzer/src/: __init__.py  agent.py  state.py  tasks.py
notes/: Agentic-Design-Patterns-Note.md  ai-basic-knowledge-note.md  ai-chat-note.md  prompt_cheetsheet.md  transformers-in-practice.md
ollama/: OLLAMA_API_GUIDE.md  ollama.env  start-ollama.sh
(+4 files in other folders)
